force-app/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <description>Customer who applied for loan</description>
    <label>Applicant</label>
    <nameField>
        <label>Applicant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>