force-app/main/default/objects/Applicant__c/fields/Adhar_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Adhar_Card_Number__c</fullName>
    <label>Adhar Card Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>