force-app/main/default/objects/Applicant__c/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <label>Applicant Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>