force-app/main/default/objects/Applicant__c/fields/Is_Pan_Aadhar_Seeding__c.field-meta.xml
<CustomField>
    <fullName>Is_Pan_Aadhar_Seeding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pan Aadhar Seeding</label>
    <type>Checkbox</type>
</CustomField>