force-app/main/default/objects/Applicant__c/fields/Pan_Number__c.field-meta.xml
<CustomField>
    <fullName>Pan_Number__c</fullName>
    <label>Pan Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>